--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ tokio = { version = "1", features = ["full"] }
 tower = "0.4.13"
 tracing = "0.1.40"
 tracing-subscriber = {version = "0.3.18", features=["env-filter"]}
+trait-variant = "0.1.1"
