--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,4 +21,8 @@ tokio = { version = "1", features = ["full"] }
 tower = "0.4.13"
 tracing = "0.1.40"
 tracing-subscriber = {version = "0.3.18", features=["env-filter"]}
+http-body-util = "0.1.0"
+json = "0.12.4"
+mime = "0.3.17"
+rand = "0.8.5"
 trait-variant = "0.1.1"
